# breezeupanalytics

./: .gitignore  BREEZEUP_PROJECT.md  PUBLIC_MODELS.md  docker-compose.yml  equine_gait_analysis_spec.docx  equine_gait_analysis_spec.md  netlify.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: rate-horses.yml  sync-data.yml
analysis/: hip188_epicenter_analysis.md
data/historic-sales/: README.md
data/ratings/: example_input.csv  example_input_rated.csv  obsMarch stride.csv  obsMarch stride_rated.csv
data/under-tack/obs_march_2026/: latest.json
frontend/: index.html  netlify.toml  package-lock.json  package.json  vite.config.js
frontend/netlify/edge-functions/: video-stream.js
frontend/netlify/functions/: obs-proxy.js  s3-assets.js  (+3 more)
frontend/src/: App.jsx  index.css
output/: OBS_March_2026_Report.xlsx
output/hip654/: hip654_raw_metrics.csv  hip654_raw_metrics.json
output/hip654_fixed/: hip654_raw_metrics.csv  hip654_raw_metrics.json
output/hip654_rerun/: hip654_raw_metrics.csv  hip654_raw_metrics.json
output/hip654_v2/: hip654_raw_metrics.csv  hip654_raw_metrics.json
output/hip654_v3/: hip654_raw_metrics.csv  hip654_raw_metrics.json
public/: index.html
scripts/: convert-historic-data.mjs  convert_stride_to_feet.py  download_ut_media.py  download_videos.py  export_excel.py  ingest_all_obs.py  ingest_legacy_obs.py  ingest_obs.py  init_db.py  inspect_obs_spa.py  publish-data.mjs  rate_horses.py  scrape_all_ft_sales.py  scrape_all_obs_sales.py  sync_to_s3.py  sync_under_tack.py  upload_live_sale_times.py  upload_ratings_to_s3.py  upload_to_s3.py
src/: config.py  db.py  models.py  storage.py
src/cv/: __init__.py  __main__.py  calibration.py  cli.py  detection.py  gait.py  keypoints.py  metrics.py  pipeline.py  sam_detector.py  schema.py  smoothing.py  video.py  visualization.py  vitpose.py
tests/: test_cv_auto_label.py  test_cv_gait.py  test_cv_labeler.py  test_cv_phase3.py  test_cv_schema.py  test_cv_training.py  test_cv_video.py  test_cv_video_pipeline.py  test_cv_vitpose.py  test_ingest.py  test_obs_parser.py  test_storage.py  test_time_mappings.py
(+171 files in other folders)
