[project]
name = "breeze-up-analytics"
version = "0.1.0"
description = "Ingest, store, and analyse US 2YO breeze-up sale data linked to racing performance outcomes"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "playwright>=1.40",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pydantic>=2.5",
    "pandas>=2.1",
    "polars>=0.20",
    "pyarrow>=14.0",
    "apscheduler>=3.10",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
