[project]
name = "breeze-up-analytics"
version = "0.1.0"
description = "Ingest, store, and analyse US 2YO breeze-up sale data linked to racing performance outcomes"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "playwright>=1.40",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pydantic>=2.5",
    "pandas>=2.1",
    "polars>=0.20",
    "pyarrow>=14.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
cv = [
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",
    "opencv-python-headless>=4.8",
    "supervision>=0.18",
    "scipy>=1.11",
    "transformers>=4.45",
    "flask>=3.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[project.scripts]
equine-gait = "src.cv.cli:main"
equine-train = "src.cv.training.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
